kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: topazio-dev
  labels:
    name: topazio-dev
    environment: development
    app: topazio-backend
